--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,8 +3,11 @@ services:
     build: .
     volumes:
       - ..:/usr/src
+      - modules_data:/usr/src/node_modules
     command: /bin/sh -c "while sleep 1000; do :; done"
     working_dir: /usr/src
+    ports:
+      - "3000:3000"
 
 volumes:
   modules_data:
