--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,39 +1,42 @@
-# ARG declarations for Node.js and Alpine versions
-ARG NODE_VERSION=20
-ARG ALPINE_VERSION=3.19
+# ARG declarations for Node.js version
+ARG NODE_VERSION=22.9
 
 # Stage 1: Node.js image
-FROM node:${NODE_VERSION}-alpine AS node
+FROM node:${NODE_VERSION}-bookworm-slim AS node
 
 # Stage 2: Final image
-FROM alpine:${ALPINE_VERSION}
+FROM debian:bookworm-slim
 
 # LABEL declarations
-LABEL version="1.0" description="Alpine Node" maintainer="dak2"
+LABEL version="1.0" description="Ubuntu Node" maintainer="dak2"
 
 # ARG declarations
 ARG USERNAME=vscode
 ARG USERID=1000
 
 # Copy Node.js from the node image
-# ref. https://stackoverflow.com/a/76132347
+COPY --from=node /usr/local /usr/local
 COPY --from=node /usr/lib /usr/lib
-COPY --from=node /usr/local/lib /usr/local/lib
-COPY --from=node /usr/local/include /usr/local/include
-COPY --from=node /usr/local/bin /usr/local/bin
 
 # Install packages and create non-root user
 RUN set -ex \
-    && apk update \
-    && apk add --no-cache \
+    && apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
         sudo \
         ca-certificates \
-    && addgroup -g ${USERID} ${USERNAME} \
-    && adduser -s /bin/ash -u ${USERID} -G ${USERNAME} -h /home/${USERNAME} -D ${USERNAME} \
-    && echo "${USERNAME} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/${USERNAME} \
+        git \
+    && groupadd --gid ${USERID} ${USERNAME} \
+    && useradd --uid ${USERID} --gid ${USERID} -m ${USERNAME} \
+    && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
     && chmod 0440 /etc/sudoers.d/${USERNAME} \
     && npm install -g pnpm \
-    && rm -rf /var/cache/apk/*
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set Node.js environment variables
+ENV NODE_PATH=/usr/local/lib/node_modules
+ENV NPM_CONFIG_PREFIX=/home/${USERNAME}/.npm-global
+ENV PATH=$NPM_CONFIG_PREFIX/bin:$PATH
 
 # Switch to non-root user
 USER ${USERNAME}
