--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "src"
+name = "infer-type-challenges"
 compatibility_date = "2024-09-23"
 compatibility_flags = [ "nodejs_compat" ]
 
@@ -17,10 +17,18 @@ port = 3000
 # binding = "MY_BUCKET"
 # bucket_name = "my-bucket"
 
-# [[d1_databases]]
-# binding = "DB"
-# database_name = "my-database"
-# database_id = ""
+[env.dev.vars]
+database_name = "dev"
+database_id = "dev"
+
+[env.prd.vars]
+database_name = "prd"
+database_id = "prd"
+
+[[d1_databases]]
+binding = "DB" # i.e. available in your Worker on env.DB
+database_name = "database_name"
+database_id = "database_id"
 
 # [ai]
 # binding = "AI"
