--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "src",
   "scripts": {
     "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "deploy": "wrangler deploy --minify src/index.ts",
+    "drizzle:generate": "drizzle-kit generate --config=./src/db/drizzle.config.ts",
+    "local:migration": "wrangler d1 migrations apply infer-type-challenges --local",
+    "remote:migration": "wrangler d1 migrations apply infer-type-challenges --remote"
   },
   "dependencies": {
+    "drizzle-orm": "^0.33.0",
     "hono": "^4.6.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
+    "drizzle-kit": "^0.24.2",
     "wrangler": "^3.78.12"
   }
 }
